k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
      tier: backend
  template:
    metadata:
      labels:
        app: ecommerce
        tier: backend
    spec:
      containers:
      - name: flask-api
        image: kavindusamaranayake/ecommerce-app-backend:latest
        ports:
        - containerPort: 5000
          name: api
        - containerPort: 8000
          name: metrics  # Multi-port
        resources:
          requests:
            cpu: "250m"    # Minimum guaranteed CPU
            memory: "256Mi"
          limits:
            cpu: "500m"    # Maximum CPU allowed
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health 
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /ready
        #     port: 5000
        #   initialDelaySeconds: 10
        #   periodSeconds: 10 #
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce
spec:
  selector:
    app: ecommerce
    tier: backend
  ports:
  - name: api
    port: 5000
    targetPort: 5000
  - name: metrics
    port: 8000
    targetPort: 8000
